syntax = "proto3";

package users;
option go_package = "github.com/avran02/decoplan/users/pb";

import "google/protobuf/timestamp.proto";

service UsersService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
    rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);
    rpc AddUserToGroup(AddUserToGroupRequest) returns (AddUserToGroupResponse);
    rpc RemoveUserFromGroup(RemoveUserFromGroupRequest) returns (RemoveUserFromGroupResponse);
    rpc DeleteGroup(DeleteGroupRequest) returns (DeleteGroupResponse);
}

message CreateUserRequest {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp birthDate = 3;
}

message CreateUserResponse {
    bool ok = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    optional string avatar = 3;
    google.protobuf.Timestamp birthDate = 4;
}

message UpdateUserRequest {
    string id = 1;
    optional string name = 2;
    optional string avatar = 3;
    optional google.protobuf.Timestamp birthDate = 4;
}

message UpdateUserResponse {
    bool ok = 1;
}

message DeleteUserRequest {
    string userID = 1;
}

message DeleteUserResponse {
    bool ok = 1;
}

message CreateGroupRequest {
    string name = 1;
    repeated string userIDs = 2;
}

message CreateGroupResponse {
    string groupID = 1;
}

message GetGroupRequest {
    string id = 1;
}

message GetGroupResponse {
    string id = 1;
    optional string groupName = 2;
    optional string avatar = 3;
    repeated UserMember members = 4;
}

message UserMember {
    string userID = 1;
}

message AddUserToGroupRequest {
    string groupID = 1;
    string userID = 2;
}

message AddUserToGroupResponse {
    bool ok = 1;
}

message RemoveUserFromGroupRequest {
    string groupID = 1;
    string userID = 2;
}

message RemoveUserFromGroupResponse {
    bool ok = 1;
}

message DeleteGroupRequest {
    string id = 1;
}

message DeleteGroupResponse {
    bool ok = 1;
}
